name:          status
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

library
  exposed-modules:
      Parser
      Views
  other-modules:
      Paths_status
  build-depends:
      base >=4.7 && <5
    , scotty ==0.11.5
    , text ==1.2.4.0

executable status
  main-is: Main.hs
  other-modules:
      Paths_status
      Parser
      Views
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , status
    , scotty ==0.11.5
    , text ==1.2.4.0
    , directory == 1.3.4.0
